--- a/src/pages/chat/chat.scss
+++ b/src/pages/chat/chat.scss
@@ -1,3 +1,28 @@
 page-chat {
-
-}
+    .innerMessage{
+      display: inline-block;
+      padding: 5px  10px;
+      background-color : #488aff;
+      color: white;
+      margin: 5px;
+      border-radius: 10px;
+    }
+  
+    .message{
+      font-size: 100%;
+      content: '';
+      display: block;
+      clear: both;
+    }
+  
+    .messageLeft{
+      float: left;
+      background:#32db64;
+    }
+  
+    .messageRight{
+      float: Right;
+      background: #488aff;
+    }
+  
+  }
